# wiki2beamer

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  sonar-project.properties
.github/workflows/: ci.yml
code/: setup.py  wiki2beamer
doc/examples/: Makefile  beamer.wiki
src/wiki2beamer/: cli.py  main.py
tests/: test_wiki2beamer.py
