[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wiki2beamer"
version = "0.10.0"
description = "Create LaTeX-beamer presentations with a wiki syntax"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "GPL-2.0-or-later"}
authors = [
    {name = "Michael Rentzsch", email = "michael.rentzsch@repc.de"},
    {name = "Kai Dietrich", email = "mail@cleeus.de"},
]
maintainers = [
    {name = "Valentin Haenel", email = "valentin@haenel.co"},
]
keywords = ["latex", "beamer", "presentation", "wiki"]
dependencies = []
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Text Processing :: Markup",
    "Topic :: Utilities",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.0.0",
    "pre-commit>=3.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://wiki2beamer.github.io"
Repository = "https://github.com/wiki2beamer/wiki2beamer"
Issues = "https://github.com/wiki2beamer/wiki2beamer/issues"

[project.scripts]
wiki2beamer = "wiki2beamer.cli:cli"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py37"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "W",   # pycodestyle warnings
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "S",   # flake8-bandit (security)
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B905",  # zip() without explicit strict parameter (Python 3.10+)
]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]  # Allow assert in tests

[tool.ruff.isort]
known-first-party = ["wiki2beamer"]

[tool.coverage.run]
source = ["wiki2beamer"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "pass",
    "raise NotImplementedError",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
